# hiraffe

./: .gitignore  README.md  cabal.project  changelog.org  doc-index.json  doctests.hs  haddock.txt  hiraffe.cabal
.github/workflows/: gettested.yml  gh-pages.yml  haskell-ci.yml
Cabal/: Distribution-Backpack-FullUnitId.html  Distribution-Compat-Directory.html  Distribution-Compat-Time.html  Distribution-PackageDescription-Check.html  Distribution-ReadE.html  Distribution-Simple-Build-PackageInfoModule.html  Distribution-Simple-Build-PathsModule.html  Distribution-Simple-Build.html  Distribution-Simple-BuildPaths.html  Distribution-Simple-CCompiler.html  Distribution-Simple-Compiler.html  Distribution-Simple-Flag.html  Distribution-Simple-HaskellSuite.html  Distribution-Simple-PackageDescription.html  Distribution-Simple-Program-Run.html  Distribution-Simple-ShowBuildInfo.html  Distribution-Simple-SrcDist.html  Distribution-Simple-Test-LibV09.html  Distribution-Simple-Test-Log.html  Distribution-Simple-UserHooks.html  Distribution-Simple.html  Distribution-TestSuite.html  Distribution-Types-ComponentLocalBuildInfo.html  Distribution-Types-GivenComponent.html  Distribution-Types-TargetInfo.html  Distribution-Utils-Json.html  Distribution-Utils-LogProgress.html  Distribution-Utils-NubList.html  Distribution-Verbosity.html  doc-index-42.html  doc-index-61.html  doc-index-E.html  doc-index-I.html  doc-index-Q.html
Cabal-syntax/: Distribution-CabalSpecVersion.html  Distribution-Compat-DList.html  Distribution-Compat-MonadFail.html  Distribution-Compat-NonEmptySet.html  Distribution-Compat-Parsing.html  Distribution-Fields.html  Distribution-ModuleName.html  Distribution-Package.html  Distribution-PackageDescription-Utils.html  Distribution-SPDX-License.html  Distribution-Types-BuildInfo.html  Distribution-Types-Component.html  Distribution-Types-ExecutableScope.html  Distribution-Types-ExposedModule.html  Distribution-Types-ForeignLib-Lens.html  Distribution-Types-ForeignLib.html  Distribution-Types-Module.html  Distribution-Types-ModuleReexport.html  Distribution-Types-MungedPackageName.html  Distribution-Types-PackageId.html  Distribution-Types-PackageName.html  Distribution-Types-PkgconfigName.html  Distribution-Types-SourceRepo-Lens.html  Distribution-Types-UnitId.html  Distribution-Types-VersionRange-Internal.html  doc-index-35.html  doc-index-36.html  doc-index-42.html  doc-index-61.html  doc-index-H.html  doc-index-N.html  doc-index-R.html  doc-index-X.html
Cabal-syntax/src/: Distribution.CabalSpecVersion.html  Distribution.Compat.Binary.html  Distribution.Compiler.html  Distribution.FieldGrammar.Class.html  Distribution.Fields.Parser.html  Distribution.Fields.Pretty.html  Distribution.Package.html  Distribution.PackageDescription.html  Distribution.SPDX.LicenseListVersion.html  Distribution.Types.Component.html  Distribution.Types.ForeignLibOption.html  Distribution.Types.GenericPackageDescription.Lens.html  Distribution.Types.Library.html  Distribution.Types.PkgconfigVersionRange.html  Distribution.Types.VersionInterval.Legacy.html  Distribution.Utils.Generic.html  Distribution.Utils.Path.html  Distribution.Utils.ShortText.html  Language.Haskell.Extension.html
Cabal/src/: Distribution.Backpack.Configure.html  Distribution.Backpack.DescribeUnitId.html  Distribution.Backpack.PreExistingComponent.html  Distribution.Compat.Time.html  Distribution.Simple.Build.Macros.Z.html  Distribution.Simple.Build.PackageInfoModule.Z.html  Distribution.Simple.Build.PackageInfoModule.html  Distribution.Simple.BuildTarget.html  Distribution.Simple.CCompiler.html  Distribution.Simple.Configure.html  Distribution.Simple.GHC.EnvironmentParser.html  Distribution.Simple.GHCJS.html  Distribution.Simple.Program.Find.html  Distribution.Simple.UserHooks.html  Distribution.Types.LocalBuildInfo.html  (+3 more)
ghc/: GHC-Builtin-PrimOps.html  GHC-Builtin-Uniques.html  GHC-Cmm-ContFlowOpt.html  GHC-Cmm-Dataflow.html  GHC-Cmm-Lexer.html  GHC-Cmm-Lint.html  GHC-Cmm-Liveness.html  GHC-Cmm-Node.html  GHC-Cmm-ProcPoint.html  GHC-CmmToAsm-AArch64-Instr.html  GHC-CmmToAsm-CFG.html  GHC-CmmToAsm-Reg-Linear-FreeRegs.html  GHC-CmmToAsm-Reg-Linear-State.html  GHC-CmmToAsm-Reg-Liveness.html  GHC-CmmToAsm-Reg-Target.html  GHC-CmmToAsm-Types.html  GHC-CmmToAsm-Wasm.html  GHC-CmmToAsm-X86-Ppr.html  GHC-CmmToAsm-X86-Regs.html  GHC-CmmToC.html  GHC-CmmToLlvm-Config.html  GHC-CmmToLlvm-Mangler.html  GHC-Core-Map-Type.html  GHC-Core-Opt-Exitify.html  GHC-Core-Opt-OccurAnal.html  GHC-Core-Opt-Pipeline.html  GHC-Core-Opt-SetLevels.html  GHC-Core-Opt-Simplify-Iteration.html  GHC-Core-Opt-SpecConstr.html  GHC-Core-Opt-Stats.html  GHC-Core-Opt-WorkWrap-Utils.html  GHC-Core-TyCo-FVs.html  GHC-Core-TyCo-Subst.html  GHC-Core-Type.html  GHC-Core-Unify.html  GHC-Data-Bag.html  GHC-Data-FastMutInt.html  GHC-Data-Graph-Base.html  GHC-Data-Graph-Ops.html  GHC-Data-StringBuffer.html  (+90 more)
ghc-boot/: doc-index-B.html  doc-index-L.html  doc-index.html  doc-index.json
ghc-heap/: GHC-Exts-Heap-Constants.html  GHC-Exts-Heap-FFIClosures_ProfilingDisabled.html  GHC-Exts-Heap-FFIClosures_ProfilingEnabled.html  GHC-Exts-Heap-ProfInfo-PeekProfInfo_ProfilingDisabled.html  GHC-Exts-Heap-ProfInfo-PeekProfInfo_ProfilingEnabled.html  GHC-Exts-Heap.html  doc-index-L.html  doc-index-Q.html  doc-index-W.html
ghci/: GHCi-InfoTable.html  GHCi-RemoteTypes.html  GHCi-Signals.html  doc-index-N.html  doc-index-P.html  doc-index-S.html
haddocks/: doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  doc-index.json  index.html
hiraffe-0.1-inplace/: Hiraffe-DFS.html  hiraffe.haddock
hpc/: Trace-Hpc-Tix.html  index.html
src/: Hiraffe.hs
template-haskell/: template-haskell.haddock
test/: QuickCheckInstances.hs
(+2367 files in other folders)
