cabal-version:       3.4
name:                hiraffe
version:             0.1
synopsis:            Graph algorithms
description:
    Graph Algorithms based on lenses
homepage:            https://fstaals.net/software/hiraffe
license:             BSD-3-Clause
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

category:            Graphs
build-type:          Simple

extra-doc-files:
    README.md
    changelog
    changelog.org

-- extra-doc-files:     docs/**/*.png
--                      docs/**/*.jpg

data-dir: data
data-files:
    PlanarGraph/*.yaml

--                      test/src/**/*.yaml

source-repository head
  type:     git
  location: https://github.com/noinia/hiraffe

--------------------------------------------------------------------------------
-- * Common Stanzas

common setup
  ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
               -fspecialise-aggressively -fexpose-all-unfoldings

  default-language: GHC2021

  default-extensions:
      DataKinds
    , TypeFamilies
    , GADTs
    , KindSignatures
    , ScopedTypeVariables
    , DerivingStrategies
    , DerivingVia
    , PatternSynonyms
    , TupleSections
    , LambdaCase
    , ViewPatterns
    , FunctionalDependencies

  build-depends:
                base                    >= 4.11      &&  < 5
              , hgeometry-combinatorial >= 1.0.0.0   &&  < 2
              , bytestring              >= 0.10      &&  < 1
              , containers              >= 0.5.9     &&  < 1
              , lens                    >= 5.0       &&  < 6
              -- , vector-builder          >= 0.3.7     &&  < 1
              , deepseq                 >= 1.1       &&  < 2
              , vector                  >= 0.11      &&  < 1
              -- , vector-circular         >= 0.1.4     &&  < 1
              -- , nonempty-vector         >= 0.2.0.0   &&  < 1
              -- , text                    >= 2         &&  < 3
              , witherable              >= 0.4       &&  < 1

              , aeson                   >= 2.0       &&  < 3
              , yaml                    >= 0.8       &&  < 1

              , mtl                     >= 2.2       &&  < 3
              , template-haskell        >= 2.10      &&  < 3

--------------------------------------------------------------------------------
-- * Main Hiraffe Library

library
  import: setup
  hs-source-dirs: src
  exposed-modules:
    Hiraffe
    Hiraffe.Graph
    Hiraffe.Graph.Class
    Hiraffe.AdjacencyListRep

    Hiraffe.DFS

    Hiraffe.PlanarGraph
    Hiraffe.PlanarGraph.AdjRep
    Hiraffe.PlanarGraph.IO
    Hiraffe.PlanarGraph.EdgeOracle
    Hiraffe.PlanarGraph.Dart

  other-modules:
    Hiraffe.PlanarGraph.Core
    Hiraffe.PlanarGraph.Dual
    Hiraffe.PlanarGraph.Instance

--------------------------------------------------------------------------------
-- * Benchmarks

-- benchmark benchmarks
--   import: setup
--   hs-source-dirs: benchmark

--   main-is: Benchmarks.hs
--   type: exitcode-stdio-1.0

--   other-modules:
--   build-depends: tasty-bench
--                , hgeometry
--                , deepseq-generics
--                , optparse-applicative


--------------------------------------------------------------------------------
-- * Test Suites

test-suite hiraffe-doctest
    import:           setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest              >= 0.8  && < 1
     , QuickCheck           >= 2.14 && < 3
     , quickcheck-instances >= 0.1  && < 1

test-suite hiraffe-hspec
  import: setup
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      hiraffe
    , hspec         >= 2.9     && < 3
    , QuickCheck    >= 2.14    && < 3

  other-modules:
    Spec
    Hiraffe.AdjacencyListRepSpec
    Hiraffe.PlanarGraph.EdgeOracleSpec
