cabal-version:       3.4
name:                hiraffe
version:             0.1
synopsis:            Graph algorithms
description:
    Graph Algorithms based on lenses
homepage:            https://fstaals.net/software/hiraffe
license:             BSD-3-Clause
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

category:            Graphs
build-type:          Simple

extra-doc-files:
    README.md
    changelog.org

-- extra-doc-files:     docs/**/*.png
--                      docs/**/*.jpg

data-dir: data
data-files:
    PlanarGraph/*.yaml

--                      test/src/**/*.yaml

source-repository head
  type:     git
  location: https://github.com/noinia/hiraffe

--------------------------------------------------------------------------------
-- * Common Stanzas

common setup
  ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
               -fspecialise-aggressively -fexpose-all-unfoldings

  default-language: GHC2021

  default-extensions:
      DataKinds
    , TypeFamilies
    , GADTs
    , KindSignatures
    , ScopedTypeVariables
    , DerivingStrategies
    , DerivingVia
    , PatternSynonyms
    , TupleSections
    , LambdaCase
    , ViewPatterns
    , FunctionalDependencies

  build-depends:
                base                    >= 4.11      &&  < 5
              , hgeometry-combinatorial >= 1.0.0.0   &&  < 2
              , bytestring              >= 0.10      &&  < 1
              , containers              >= 0.5.9     &&  < 1
              , lens                    >= 5.0       &&  < 6
              -- , vector-builder          >= 0.3.7     &&  < 1
              , deepseq                 >= 1.1       &&  < 2
              , vector                  >= 0.11      &&  < 1
              -- , vector-circular         >= 0.1.4     &&  < 1
              -- , nonempty-vector         >= 0.2.0.0   &&  < 1
              , text                    >= 2         &&  < 3
              , witherable              >= 0.4       &&  < 1
              , aeson                   >= 2.0       &&  < 3
              , HsYAML                  >= 0.2       &&  < 1
              -- , HsYAML-aeson            >= 0.2       &&  < 1
              , mtl                     >= 2.2       &&  < 3
              , template-haskell        >= 2.10      &&  < 3
              , filepath                >= 1.4.100   &&  < 2
              , file-io                 >= 0.1       &&  < 1


common quickcheck-setup
    build-depends:
        QuickCheck                      >= 2.10    && < 3
      , quickcheck-instances            >= 0.3     && < 1

common test-setup
    import: quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                 >= 2.9      && < 3
      , hiraffe:quickcheck

--------------------------------------------------------------------------------
-- * Main Hiraffe Library

library
  import: setup
  hs-source-dirs: src
  exposed-modules:
    Hiraffe
    Hiraffe.Graph
    Hiraffe.Graph.Class
    Hiraffe.AdjacencyListRep

    Hiraffe.DFS

    Hiraffe.PlanarGraph
    Hiraffe.PlanarGraph.AdjRep
    Hiraffe.PlanarGraph.IO
    Hiraffe.PlanarGraph.EdgeOracle
    Hiraffe.PlanarGraph.Dart

  other-modules:
    Hiraffe.PlanarGraph.Core
    Hiraffe.PlanarGraph.Dual
    Hiraffe.PlanarGraph.Instance

--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      Hiraffe.Instances
    build-depends:
         hiraffe

--------------------------------------------------------------------------------
-- * Benchmarks

-- benchmark benchmarks
--   import: setup
--   hs-source-dirs: benchmark

--   main-is: Benchmarks.hs
--   type: exitcode-stdio-1.0

--   other-modules:
--   build-depends: tasty-bench
--                , hgeometry
--                , deepseq-generics
--                , optparse-applicative


--------------------------------------------------------------------------------
-- * Test Suites

test-suite hiraffe-doctest
    import:           setup, test-setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest              >= 0.8  && < 1
     , QuickCheck           >= 2.14 && < 3
     , quickcheck-instances >= 0.1  && < 1

test-suite hiraffe-hspec
  import: setup, test-setup
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      hiraffe

  other-modules:
    Spec
    Hiraffe.AdjacencyListRepSpec
    Hiraffe.PlanarGraph.EdgeOracleSpec
    Hiraffe.PlanarGraphSpec
